# leeskills

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md  SECURITY.md  manifest.json  pyproject.toml
.github/workflows/: validate.yml
adapters/claude-code/: README.md
adapters/codex/: README.md
adapters/generic/: README.md
docs/: architecture.md  corpus-study.md  design-foundations.md  evaluation.md  integration.md  source-notes.md
examples/: README.md  content-inventory.json  full-audit-request.md  manual-agent-integration.md  visual-budget.json
scripts/: evaluate_trigger_results.py  install.py  validate_repo.py
skills/accessibility-simplicity-guard/: SKILL.md
skills/accessibility-simplicity-guard/assets/: accessibility-report-example.json  accessibility-report.schema.json
skills/accessibility-simplicity-guard/evals/: evals.json  trigger_queries.json
skills/accessibility-simplicity-guard/references/: wcag-checklist.md
skills/accessibility-simplicity-guard/scripts/: validate_accessibility_report.py
skills/anti-ai-slop/: SKILL.md
skills/anti-ai-slop/assets/: full-report-template.md
skills/anti-ai-slop/evals/: evals.json  trigger_queries.json
skills/component-contract-audit/: SKILL.md
skills/content-grounding/: SKILL.md
skills/motion-necessity-gate/: SKILL.md
skills/prune-and-verify/: SKILL.md
skills/slop-signal-audit/: SKILL.md
skills/specificity-editor/: SKILL.md
skills/structure-selector/: SKILL.md
skills/visual-entropy-budget/: SKILL.md
tests/: test_repository.py
(+54 files in other folders)
