[project]
name = "leeskills"
version = "0.1.0"
description = "Portable Agent Skills for grounding, simplifying, and verifying digital design output."
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = ["agent-skills", "design-audit", "accessibility", "content-design", "ai-slop"]

[tool.ruff]
line-length = 100
target-version = "py39"
